--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
     <meta property="og:image" content="http://www.aia.co.kr/content/dam/kr/ko/images/site/og/aia-life.png">
-    <title>(무) AIA건강+ 암보험(갱신형)</title>
+    <title>(무) AIA건강+ 암보험(갱신형)2</title>
 
 <script type="text/javascript">
 	var _dl = {
