--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
     <meta property="og:image" content="http://www.aia.co.kr/content/dam/kr/ko/images/site/og/aia-life.png">
-    <title>(무) AIA건강+ 암보험(갱신형)2</title>
+    <title>(무) AIA건강+ 암보험(갱신형)3</title>
 
 <script type="text/javascript">
 	var _dl = {
@@ -407,7 +408,8 @@
 
             .popup.type02 .popup_content { width:94%; top: 50%;}
             .popup.type02 .popup_content { top: 22%; border-top: 5vw solid #dc3e69; text-align: center; padding-bottom:8vw; }
-			.popup.reconfirm .popup_content {width: 70%;padding: 20px;padding-top: 0;padding-bottom: 25px; top:22%}
+			.popup.reconfirm .popup_content {width: 80%;padding: 20px;padding-top: 0;padding-bottom: 25px; top:22%}
+			.popup.reconfirm .popup_content img { width:80%; }
 			.popup.type02 .popup_content h2 { margin-top: 10vw; padding-top: 14vw; background: url("./images/m20221111_popup_icon01.png") no-repeat center 0 / 11vw auto; }
             .popup.type02 .popup_content p.text { margin-top: 10vw; font-size: 4vw; line-height: 5.6vw; padding: 0 1vw; }
             .popup.type02 .popup_content p.text span { color: #dc3e69; }
@@ -416,6 +418,7 @@
             .popup.comp .popup_content h2 { font-size: 8.4vw; line-height:10vw; }
             .popup.comp .popup_content h2 span { color:#dc3e69; }
             .popup.comp .btn_close { position: absolute; top:8px; right: 8px; }
+			.popup.reconfirm .popup_content p.text { margin-top: 10vw; font-size: 4.6vw; line-height: 6.6vw; padding: 0 1vw; }
             .popup.calc .popup_content { height: auto; margin-left: 0;}
             .popup.calc .popup_content h2 { font-size: 4vw; }
             .popup.calc .popup_content .calc_area { margin-top: 2.4vw; font-size: 8.6vw; }
