--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
     <meta property="og:image" content="http://www.aia.co.kr/content/dam/kr/ko/images/site/og/aia-life.png">
-    <title>(무) AIA건강+ 암보험(갱신형)3</title>
+    <title>(무) AIA건강+ 암보험(갱신형)</title>
 
 <script type="text/javascript">
 	var _dl = {
@@ -415,9 +414,10 @@
             .popup.type02 .popup_content p.text span { color: #dc3e69; }
             .popup.type02 .popup_content p.guide { margin-top: 3.2vw; font-size: 3.6vw; color:#7f7f7f; }
             .popup.comp .popup_content { height: auto; margin-left: 0;}
-            .popup.comp .popup_content h2 { font-size: 8.4vw; line-height:10vw; }
-            .popup.comp .popup_content h2 span { color:#dc3e69; }
-            .popup.comp .btn_close { position: absolute; top:8px; right: 8px; }
+            .popup.comp .popup_content h2 { font-size: 4vw;}
+            .popup.comp .popup_content .calc_area { margin-top: 2.4vw; font-size: 8.6vw; }
+            .popup.comp .popup_content .calc_area strong { margin: 0 7.6vw; font-size: 8.4vw; color: #dc3e69; }
+			.popup.comp .btn_close { position: absolute; top:8px; right: 8px; }
 			.popup.reconfirm .popup_content p.text { margin-top: 10vw; font-size: 4.6vw; line-height: 6.6vw; padding: 0 1vw; }
             .popup.calc .popup_content { height: auto; margin-left: 0;}
             .popup.calc .popup_content h2 { font-size: 4vw; }
